# GitLore

./: .env.example  .gitignore  README copy.md  README.md  SCREENSHOTS.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: answer.py  connect.py  feedback.py  index_status.py  investigation.py  query.py  watchlist.py
backend/app/db/: database.py  models.py  session.py
backend/app/ingestion/: artifact_parser.py  github_client.py  ingestion_service.py  relation_resolver.py  symbol_extractor.py
backend/app/providers/: groq_adapter.py  inception_adapter.py  interface.py  openrouter_adapter.py  router.py
backend/app/retrieval/: graph_expansion.py  lexical_search.py  retrieval_orchestrator.py  semantic_search.py
backend/app/schemas/: schemas.py
backend/app/services/: answer_synthesizer.py  evidence_builder.py  orchestrator.py  query_interpreter.py
backend/app/utils/: logging.py  security.py
backend/app/workers/: indexing_worker.py
backend/tests/: test_api.py  test_providers.py  test_retrieval.py
migrations/: 001_initial.sql
scripts/: migrate.mjs  seed.mjs
src/__tests__/: retrieval.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/watchlist/: page.tsx
src/components/: ConfidenceBadge.tsx  EmptyState.tsx  EvidenceCard.tsx  MermaidDiagram.tsx  TimelineView.tsx
src/lib/: db.ts
src/lib/pipeline/: orchestrator.ts  query-interpreter.ts
src/types/: index.ts
(+16 files in other folders)
