[project]
name = "gitlore-backend"
version = "0.1.0"
description = "GitLore — repository archaeology backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "alembic>=1.12.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "greenlet>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
